@@ -1,14 +1,122 @@
 import SwiftUI
+import Foundation
 
 // NOTE: For ensuring that the application has focus on open.
 // Might not be necessary -- seems the issues I am facing might just be
 // a quark of executing the binary from the terminal.
 class AppDelegate: NSObject, NSApplicationDelegate {
+    private var serverSocket: Int32 = -1
+    private let socketPath = "/tmp/tabmanager.sock"
+
     func applicationDidFinishLaunching(_ notification: Notification) {
         NSApp.setActivationPolicy(.regular)
         DispatchQueue.main.async {
             NSRunningApplication.current.activate(options: .activateIgnoringOtherApps)
             NSApp.windows.first?.makeKeyAndOrderFront(nil)
+        }
+        startUDSServer()
+    }
+
+    private func startUDSServer() {
+        unlink(socketPath)
+        serverSocket = socket(AF_UNIX, SOCK_STREAM, 0)
+        guard serverSocket >= 0 else {
+            print("App: Failed to create socket")
+            return
+        }
+
+        var addr = sockaddr_un()
+        addr.sun_family = sa_family_t(AF_UNIX)
+        let pathLen = socketPath.withCString { Int(strlen($0)) }
+        _ = socketPath.withCString { src in
+            withUnsafeMutablePointer(to: &addr.sun_path) { dest in
+                let destPtr = UnsafeMutableRawPointer(dest).assumingMemoryBound(to: Int8.self)
+                strncpy(destPtr, src, 104) // 104 is the max length for sun_path
+            }
+        }
+        addr.sun_len = UInt8(MemoryLayout<sa_family_t>.size + MemoryLayout<UInt8>.size + pathLen + 1)
+
+        let addrLen = socklen_t(addr.sun_len)
+        let bindResult = withUnsafePointer(to: &addr) {
+            $0.withMemoryRebound(to: sockaddr.self, capacity: 1) {
+                Darwin.bind(serverSocket, $0, addrLen)
+            }
+        }
+
+        guard bindResult == 0 else {
+            print("App: Failed to bind socket. Error: \(String(cString: strerror(errno)))")
+            return
+        }
+
+        guard Darwin.listen(serverSocket, 5) == 0 else {
+            print("App: Failed to listen on socket")
+            return
+        }
+
+        print("App: UDS Server started at \(socketPath)")
+
+        Thread.detachNewThread {
+            self.acceptConnections()
+        }
+    }
+
+    private func acceptConnections() {
+        while true {
+            var clientAddr = sockaddr_un()
+            var len = socklen_t(MemoryLayout<sockaddr_un>.size)
+            let clientSocket = withUnsafeMutablePointer(to: &clientAddr) {
+                $0.withMemoryRebound(to: sockaddr.self, capacity: 1) {
+                    Darwin.accept(self.serverSocket, $0, &len)
+                }
+            }
+
+            if clientSocket >= 0 {
+                print("App: Accepted new UDS connection")
+                Thread.detachNewThread {
+                    self.handleClient(clientSocket)
+                }
+            }
+        }
+    }
+
+    private func handleClient(_ clientSocket: Int32) {
+        let bufferSize = 4096
+        let buffer = UnsafeMutablePointer<UInt8>.allocate(capacity: bufferSize)
+        defer {
+            buffer.deallocate()
+            close(clientSocket)
+        }
+
+        while true {
+            let bytesRead = read(clientSocket, buffer, bufferSize)
+            if bytesRead > 0 {
+                let data = Data(bytes: buffer, count: bytesRead)
+                if let message = String(data: data, encoding: .utf8) {
+                    print("App: Received UDS message: \(message)")
+                    // Verification log
+                    let logMsg = "[\(Date())] UDS Data: \(message)\n"
+                    try? logMsg.appendLineTo(path: "/tmp/tabmanager_uds.log")
+                }
+            } else if bytesRead == 0 {
+                print("App: UDS connection closed by peer")
+                break
+            } else {
+                print("App: UDS read error")
+                break
+            }
+        }
+    }
+}
+
+extension String {
+    func appendLineTo(path: String) throws {
+        let data = (self + "\n").data(using: .utf8)!
+        if let fileHandle = FileHandle(forWritingAtPath: path) {
+            fileHandle.seekToEndOfFile()
+            fileHandle.write(data)
+            fileHandle.closeFile()
+        } else {
+            try data.write(to: URL(fileURLWithPath: path), options: .atomic)
         }
     }
 }
